<resources>
    <string name="app_name">BagBeach</string>
    <string name="prenota">PRENOTA</string>
    <string name="prenotazioni">PRENOTAZIONI</string>
    <string name="home">HOME</string>
    <string name="profilo">PROFILO</string>
    <string name="hint_cerca">Cerca</string>
    <string name="button_sel_date">SELEZIONA LE DATE</string>
    <string name="button_calendario">bottone per il calendario</string>
    <string name="button_persone">bottone per inserire numero persone</string>
    <string name="button_cerca">bottone per cercare le stanze secondo certi criteri</string>
    <string name="formato_date">%1$s %2$s %3$s - %4$s %5$s %6$s</string>
    <string name="formato_date_singologiorno">%1$s %2$s %3$s</string>
    <string name="titolo_view_num_persone">Indica quante persone e lettini prenotare</string>
    <string name="text1_view_num_persone">Persone</string>
    <string name="text2_view_num_persone">Lettini/Divanetti</string>

    <string name="bottone_meno">bottone meno</string>
    <string name="bottone_piu">bottone piu</string>
    <string name="info">Info</string>
    <string name="promo">Promo</string>
    <string name="recensioni">RECENSIONI</string>
    <string name="gestisci_prenotazioni">Gestisci Prenotazioni</string>
    <string name="servizi">Servizi</string>
    <string name="pagamenti">Pagamenti</string>
    <string name="esci">Esci</string>
    <string name="nome">Nome</string>
    <string name="inserisci_nome">Inserisci nome</string>
    <string name="inserisci_telefono">Inserisci telefono</string>
    <string name="cognome">Cognome</string>
    <string name="inserisci_cognome">Inserisci cognome</string>
    <string name="e_mail">Indirizzo e-mail</string>
    <string name="inserisci_e_mail">Inserisci e-mail</string>
    <string name="formato_email_errato">Formato email errato</string>
    <string name="formato_iabn_errato">Formato IBAN errato</string>
    <string name="telefono">Telefono cellulare</string>
    <string name="salva_i_dati_per_le_prossime_prenotazioni">Salva i dati per le prossime prenotazioni</string>
    <string name="modalita_di_pagamento">MODALITA\' DI PAGAMENTO</string>
    <string name="paga_con_paypal">Paga con PayPal</string>
    <string name="paga_con_la_carta">Paga con la carta</string>
    <string name="paga">PAGA</string>
    <string name="text_arrivo">Arrivo\n%1$s</string>
    <string name="text_partenza">Partenza\n%1$s</string>
    <string name="text_notti">Hai selezionato:\n%1$s</string>
    <string name="prezzo_originale">Prezzo originale</string>
    <string name="prezzo_solo_su_mobile">Prezzo solo su mobile</string>
    <string name="sconto">Sconto</string>
    <string name="desc_sconto_mobile">Il prezzo originale viene scontato se si paga in anticipo direttamente dall\'app.</string>
    <string name="il_prezzo_scontato_perch_la_struttura_ha_creato_un_offerta">Il prezzo è scontato perchè la struttura ha creato un\'offerta.</string>
    <string name="totale">Totale</string>
    <string name="iva_10">Iva 10%</string>
    <string name="iva_22">Iva 22%</string>
    <string name="include_tasse_e_costi">Include tasse e costi</string>
    <string name="euro_variabile">€ %1$s</string>
    <string name="euro_variabile_sconto">- € %1$s</string>
    <string name="tasse_e_imposte">Altre tasse e imposte</string>
    <string name="bonifico">Bonifico</string>
    <string name="pagamento_avvenuto_con_successo">Pagamento avvenuto con successo!</string>
    <string name="spunta_verde_di_conferma">spunta verde di conferma</string>
    <string name="prossimo_step">PROSSIMO STEP</string>
    <string name="inserisci_dati_carta">Inserisci dati carta</string>
    <string name="numero_carta">Numero carta</string>
    <string name="inserisci_numero_carta">Inserisci numero carta</string>
    <string name="cvv">CVV</string>
    <string name="inserisci_cvv">Inserisci cvv</string>
    <string name="data_di_scadenza">Data di scadenza</string>
    <string name="inserisci_data_di_scadenza">Inserisci data</string>
    <string name="inserisci_dati_paypal">Inserisci dati PayPal</string>
    <string name="inserisci_dati_bonifico">Inserisci dati bonifico</string>
    <string name="numero_iban">Numero IBAN</string>
    <string name="inserisci_iban">Inserisci IBAN</string>
    <string name="Inserisci_numero_valido">Inserisci numero valido</string>
    <string name="Inserisci_data_valida">Inserisci data valida</string>
    <string name="desc_password_field">Campo di input per la password</string>
    <string name="query_failed">Query failed</string>
    <string name="query_format_error">Query format error</string>
    <string name="query_format_error_image">Query format error image</string>
    <string name="query_format_errorDatiMancanti">Query error, alcuni dati non sono stati caricati correttamente</string>
    <string name="query_successful">Query succes</string>
    <string name="query_error">Query error</string>
    <string name="query_error_image">Query error image</string>
    <string name="title_activity_amministratore">ActivityAmministratore</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="notifiche">NOTIFICHE</string>
    <string name="paga_in_anticipo">Paga in anticipo</string>
    <string name="lettini">lettini</string>
    <string name="barca">Barca</string>
    <string name="pedal">Pedalò</string>
    <string name="moto_d_acqua">Moto d\'acqua</string>
    <string name="giro_in_barca">Giro in barca</string>
    <string name="alubat">Alubat</string>
    <string name="benetti">Benetti</string>
    <string name="alto_mare_trip">Alto mare trip</string>
    <string name="island_trip">Island trip</string>
    <string name="il_tuo_profilo">IL TUO PROFILO</string>
    <string name="nome_e_cognome">Nome e cognome: %1$s</string>
    <string name="email">Email: %1$s</string>
    <string name="le_tue_recensioni">📑 Le tue recensioni</string>
    <string name="strumenti">STRUMENTI</string>
    <string name="impostazioni">⚙️ Impostazioni</string>
    <string name="listacentrale">listaCentrale</string>
    <string name="modifica_profilo">Modifica profilo</string>
    <string name="metodi_di_pagamento">Metodi di pagamento</string>
    <string name="_1_0_0">1.0.0</string>
    <string name="versione_app">Versione app</string>


    <string name="register">REGISTER</string>
    <string name="login_email_hint">Email</string>
    <string name="login_password_hint">Password</string>
    <string name="signup_login_hint">Already have an account? Sign In</string>
    <string name="login_signup_hint">Non hai un account? Registrati</string>
    <string name="_1">1</string>
    <string name="persone_1s">%1$s Persone</string>
    <string name="lettini_1_s">%1$s Lettini</string>
    <string name="lido_bagbeach">Lido BagBeach</string>
    <string name="hai_dimenticato_la_password">Hai dimenticato la password?</string>
    <string name="login">Login</string>
    <string name="prenotazioni_effettuate">Prenotazioni effettuate</string>
    <string name="cambia_password">Cambia password</string>
    <string name="vecchia_password">Vecchia password</string>
    <string name="nuova_password">Nuova password</string>
    <string name="applica_modifiche">Applica modifiche</string>
    <string name="le_tue_recensioniMaiuscolo">LE TUE RECENSIONI</string>
    <string name="pubblicata_da_1s">Pubblicata da %1$s</string>
    <string name="non_ci_sono_recensioni_al_momento">Non ci sono recensioni al momento</string>

    <string name="title_recensioni">RECENSIONI UTENTI</string>
    <string name="aggiungi_recensione">Aggiungi recensione</string>
    <string name="pubblica_recensione">Pubblica recensione</string>
    <string name="inserisci_una_recensione">Inserisci una descrizione del servizio</string>
    <string name="inserisci_titolo_recensione">Inserisci titolo recensione</string>
    <string name="clicca_per_vedere_recensioni">Clicca per vedere recensioni</string>
    <string name="codice_prenotazione_1_s">Codice prenotazione: %1$s</string>
    <string name="n_persone_1_s">N. Persone: %1$s</string>
    <string name="data_1_s">Data: %1$s</string>
    <string name="inserisci_dati">Inserisci dati</string>
    <string name="dati_metodi_di_pagamento">Dati metodi di pagamento</string>
    <string name="nome_titolare_n_1_s">Nome titolare:\n%1$s</string>
    <string name="email_n_1_s">Email:\n%1$s</string>
    <string name="iban_n_1_s">IBAN:\n%1$s</string>
    <string name="data_di_scadenza_n_1_s">Data di scadenza:\n%1$s</string>
    <string name="cvv_n_1_s">Cvv:\n %1$s</string>
    <string name="numero_carta_n_1_s">Numero carta:\n%1$s</string>
    <string name="_1_s_come_metodo_di_pagamento_non_presente">%1$s come metodo di pagamento non presente</string>
    <string name="attiva">ATTIVA</string>
    <string name="qrcode">qrcode</string>
    <string name="login_background">login background</string>
    <string name="nessuna_nuova_notifica_presente">Nessuna nuova notifica presente</string>
    <string name="x">X</string>
    <string name="non_sono_state_effettuate_prenotazioni">Non sono state effettuate prenotazioni</string>
    <string name="inserisci_almeno_un_dato">Inserisci almeno un dato</string>
    <string name="le_modifiche_non_sono_state_applicate">Le modifiche non sono state applicate</string>
    <string name="modifiche_applicate">Modifiche applicate!</string>
    <string name="la_vecchia_password_non_corretta">La vecchia password non è corretta!</string>
    <string name="la_nuova_password_troppo_debole">La nuova password è troppo debole!</string>
    <string name="inserire_una_password_diversa_da_quella_vecchia">Inserire una password diversa da quella vecchia</string>
    <string name="errore_inserimento_pass">errore inserimento pass</string>
    <string name="failed_inserimento_pass">failed inserimento pass</string>
    <string name="il_pagamento_non_andato_a_buon_fine_inserire_metodo_di_pagamento">Il pagamento non è andato a buon fine!\nInserire metodo di pagamento</string>
    <string name="soldi_non_sufficienti_caricare_altro_conto_paypal">Soldi non sufficienti, caricare altro conto PayPal</string>
    <string name="soldi_non_sufficienti_caricare_altra_carta">Soldi non sufficienti, caricare altra carta</string>
    <string name="soldi_non_sufficienti_caricare_altro_conto_corrente">Soldi non sufficienti, caricare altro conto corrente</string>
    <string name="seleziona_un_metodo_di_pagamento">Seleziona un metodo di pagamento</string>
    <string name="numero_di_telefono_formato_errato">numero di telefono formato errato</string>
    <string name="inserisci_mail_valida">Inserisci mail valida</string>
    <string name="errore_inserimento_mail">errore inserimento mail</string>
    <string name="inserire_dati">Inserire dati</string>
    <string name="credenziali_errate_riprovare">Credenziali errate, riprovare!</string>
    <string name="inserito_correttamente">Inserito correttamente</string>
    <string name="errore_inserimento">Errore inserimento</string>
    <string name="prenotazione_per_gi_effettuata">Prenotazione per %1$s già effettuata, cambiare giorno o servizio</string>
    <string name="prenotazione_per_gi_effettuata2">Prenotazione per %1$s - %2$s già effettuata, cambiare giorno o servizio</string>
</resources>