<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/textView19"
        android:layout_marginBottom="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:textSize="16sp"
        android:padding="8dp"
        android:background="@drawable/linea_areapersonale"
        android:text="@string/modifica_profilo"
       />

    <TextView
        android:id="@+id/textView20"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:textStyle="bold"
        android:textSize="16sp"
        android:padding="8dp"
        android:background="@drawable/linea_areapersonale"
        android:text="@string/metodi_di_pagamento" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/linea_areapersonale"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:textStyle="bold"
            android:textSize="16sp"
            android:padding="8dp"
            android:text="@string/versione_app" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginBottom="10dp"
            android:textStyle="bold"
            android:textSize="16sp"
            android:padding="8dp"
            android:text="@string/_1_0_0"
            android:gravity="end" />

    </LinearLayout>

    <TextView
        android:id="@+id/textView21"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:textSize="16sp"
        android:padding="8dp"
        android:background="@drawable/linea_areapersonale"
        android:text="@string/esci" />


</LinearLayout>