<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/celeste"
        android:orientation="vertical"
        android:paddingBottom="30dp" >

        <TextView
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:text="@string/profilo"
            />

        <ImageView
            android:background="@drawable/cerchio_profilo"
            android:foreground="@drawable/baseline_person_120"
            android:id="@+id/imageView2"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_marginTop="10dp"
            android:layout_gravity="center"
            />

    </LinearLayout>

<ScrollView
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="10dp">

        <com.google.android.material.textfield.TextInputLayout
            style="@style/parent"
            android:layout_marginTop="@dimen/signup_text_margin_top">
            <EditText
                android:id="@+id/editTextNomeModProfilo"
                style="@style/modifiedEditText"
                android:inputType="text"
                android:maxLines="1"
                android:hint="@string/nome"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/parent"
            android:layout_marginTop="@dimen/signup_text_margin_top">
            <EditText
                android:id="@+id/editTextCognomeModProfilo"
                style="@style/modifiedEditText"
                android:inputType="text"
                android:maxLines="1"
                android:hint="@string/cognome"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/parent"
            android:layout_marginTop="@dimen/signup_text_margin_top">
            <EditText
                android:id="@+id/editTextTelModProfilo"
                style="@style/modifiedEditText"
                android:inputType="text"
                android:maxLines="1"
                android:hint="@string/telefono"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/parent"
            android:layout_marginTop="@dimen/signup_text_margin_top">
            <EditText
                android:id="@+id/editTextMailModProfilo"
                style="@style/modifiedEditText"
                android:inputType="text"
                android:maxLines="1"
                android:hint="@string/e_mail"/>
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:layout_marginTop="20dp"
            android:id="@+id/textCambiaPass"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:textColor="@color/celeste"
            android:text="@string/cambia_password" />

        <com.google.android.material.textfield.TextInputLayout
            style="@style/parent"
            android:id="@+id/container_vecchiapass"
            android:visibility="gone"
            android:layout_marginTop="@dimen/signup_text_margin_top">
            <EditText
                android:id="@+id/editTextVecchiaPass"
                style="@style/modifiedEditText"
                android:inputType="text"
                android:maxLines="1"
                android:hint="@string/vecchia_password"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/parent"
            android:visibility="gone"
            android:id="@+id/container_nuovapass"
            android:layout_marginTop="@dimen/signup_text_margin_top">
            <EditText
                android:id="@+id/editTextNewPass"
                style="@style/modifiedEditText"
                android:inputType="text"
                android:maxLines="1"
                android:hint="@string/nuova_password"/>
        </com.google.android.material.textfield.TextInputLayout>


    </LinearLayout>

</ScrollView>

    <Button
        android:id="@+id/buttonApplicaModProfilo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/applica_modifiche"
        android:layout_gravity="bottom|center"/>


</LinearLayout>