<?xml version="1.0" encoding="utf-8"?>

<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:elevation="5dp"
    android:padding="5dp"
    android:layout_marginEnd="5dp"
    android:layout_marginStart="5dp"
    android:layout_marginTop="10dp"
    android:layout_marginBottom="10dp"
    app:cardCornerRadius="20dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        >

        <LinearLayout
            android:layout_width="0dp"
            android:orientation="vertical"
            android:layout_weight="1"
            android:layout_height="match_parent">
            <TextView
                android:id="@+id/cod_prenotazione"
                android:textStyle="bold"
                android:textSize="16sp"
                android:padding="5dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/codice_prenotazione_1_s" />

            <TextView
                android:id="@+id/textNumPersonePrenotazione"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:textSize="16sp"
                android:padding="5dp"
                android:text="@string/n_persone_1_s" />

            <TextView
                android:id="@+id/textDataPrenotazione"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:textSize="16sp"
                android:padding="5dp"
                android:text="@string/data_1_s" />

            <TextView
                android:id="@+id/attivo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:textSize="16sp"
                android:textColor="@color/green"
                android:padding="5dp"
                android:visibility="gone"
                android:text="@string/attiva" />




        </LinearLayout>




        <ImageView
            android:id="@+id/codiceQR"
            android:layout_gravity=""
            android:layout_margin="8dp"
            android:layout_marginEnd="10dp"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:contentDescription="@string/qrcode" />

    </LinearLayout>




</androidx.cardview.widget.CardView>