<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/modalita_di_pagamento"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.187"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5">

        <RadioButton
            android:id="@+id/radioButtonPayPal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/paga_con_paypal" />

        <RadioButton
            android:id="@+id/radioButtonCarta"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/paga_con_la_carta" />

        <RadioButton
            android:id="@+id/radioButtonBonifico"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/bonifico" />
    </RadioGroup>

    <LinearLayout
        android:id="@+id/linearLayout5"
        android:layout_width="370dp"
        android:layout_height="380dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/rectangle_shape_bold"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@id/buttonPaga"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="2dp">

            <androidx.fragment.app.FragmentContainerView
                android:id="@+id/frag_resoconto_mod_pagamento"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </ScrollView>

    </LinearLayout>

    <Button
        android:id="@+id/buttonPaga"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/paga"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout5" />


</androidx.constraintlayout.widget.ConstraintLayout>
