<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/titleRecensioni"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="22sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="10dp"
        android:layout_gravity="center"
        android:text="@string/le_tue_recensioniMaiuscolo" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerview_recensioni"
        android:padding="5dp"
        android:layout_width="match_parent"
        android:layout_weight="1"
        android:layout_height="0dp" />

    <TextView
        android:id="@+id/nessunaRecensioneAvviso"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:layout_weight="1"
        android:layout_marginTop="250dp"
        android:layout_gravity="center"
        android:text="@string/non_ci_sono_recensioni_al_momento" />

    <LinearLayout
        android:id="@+id/addRecensione"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:elevation="5dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/editRecensioneTitolo"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:layout_weight="1"
                android:padding="10dp"
                android:layout_margin="4dp"
                android:background="@drawable/background_oval"
                android:inputType="text"
                android:elevation="5dp"
                android:hint="@string/inserisci_titolo_recensione" />

            <RatingBar
                android:id="@+id/ratingBarRec"
                style="?android:attr/ratingBarStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:isIndicator="false"
                android:numStars="5"
                android:scaleX="1.5"
                android:scaleY="1.5"
                android:stepSize="0.5" />
        </LinearLayout>



        <EditText
            android:id="@+id/editRecensioneDesc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:padding="10dp"
            android:layout_margin="4dp"
            android:background="@drawable/background_oval"
            android:inputType="text"
            android:elevation="5dp"
            android:hint="@string/inserisci_una_recensione" />

        <Button
            android:id="@+id/buttonRecensione"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pubblica_recensione" />
    </LinearLayout>







</LinearLayout>